# angra

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MEMORY.md  README.md  ROADMAP.md
.github/workflows/: ci.yml
benches/: README.md
benches/fixtures/conflict/: angra.toml  build.gradle  pom.xml
benches/fixtures/direct/: angra.toml  build.gradle  pom.xml
benches/fixtures/transitive/: angra.toml  pom.xml
src/: benchmark.rs  commands.rs  config.rs  lib.rs  lockfile.rs  main.rs  manifest.rs  maven.rs  metadata.rs  pom.rs  resolver.rs  settings.rs
tests/: cli_resolve.rs
