[package]
name = "angra"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "A fast, Maven-compatible Java project tool"
repository = "https://github.com/jpsacheti/angra"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
dirs = "6.0.0"
quick-xml = { version = "0.37.5", features = ["serialize"] }
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
thiserror = "2.0.12"
toml = "0.8.22"

[dev-dependencies]
tempfile = "3.20.0"
