[package]
name = "angra"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "A fast, Maven-compatible Java project tool"
repository = "https://github.com/jpsacheti/angra"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
indexmap = { version = "2.14.0", features = ["serde"] }
quick-xml = { version = "0.40.1", features = ["serialize"] }
reqwest = { version = "0.13.3", default-features = false, features = ["blocking", "rustls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha1 = "0.11.0"
sha2 = "0.11.0"
thiserror = "2.0.12"
toml = { version = "1.1.2", features = ["preserve_order"] }

[dev-dependencies]
tempfile = "3.27.0"
